<resources>
    <string name="app_name">Github User</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_setting">Setting</string>
    <string name="alert_image">alert image</string>
    <string name="github_user_avatar">github user avatar</string>
    <string name="github_token">a4cb9857f3837750295ed4498d9a55e0827e496e</string>
    <string name="search_github_user">Search Github User</string>
    <string name="search">search</string>
    <string name="message_user_not_found">User Not Found</string>
    <string name="icon_user_location">user location icon</string>
    <string name="icon_user_office">user office icon</string>
    <string name="icon_user_repositories">icon user repositories</string>
    <string name="icon_user_following">icon user following</string>
    <string name="icon_user_followers">icon user followers</string>
    <string name="user_profile">User Profile</string>
    <string name="tab_follower">Followers</string>
    <string name="tab_following">Following</string>
    <string name="user_following_amount">%d following</string>
    <string name="user_followers_amount">%d followers</string>
    <string name="user_repository_amount">%d repo</string>
    <string name="have_no_follower">Not Have Follower</string>
    <string name="message_no_favorite_found">No Favorite User Data</string>
    <string name="title_favorite">Favorite User</string>
    <string name="icon_remove">remove icon</string>
    <string name="confirmation_delete">Delete Confirmation</string>
    <string name="message_confirmation_delete">Are you sure want to delete this ?</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="message_something_wrong">Ooops, something wrong</string>
    <string name="message_favorite_add_success">Added to favorite successfully</string>
    <string name="message_favorite_delete_success">Deleted from favorite successfully</string>
    <string name="message_alarm_set_success">Daily alarm set successfully</string>
    <string name="title_alarm_notification">Hello</string>
    <string name="message_alarm_notification">Open github user app now</string>
    <string name="set_language">Set Language</string>
    <string name="icon_right">icon right</string>
    <string name="accept_daily_notification">Accept Daily Notification ?</string>
    <string name="title_setting">Setting</string>
    <string name="message_alarm_cancel_success">Alarm canceled successfully</string>
</resources>