<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <include layout="@layout/include_loading"/>
    <include layout="@layout/include_alert"/>


    <FrameLayout
        android:id="@+id/wrap_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="30dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_user"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@color/colorGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_user" />

                <TextView
                    android:id="@+id/txt_user_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_user_name" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toStartOf="@+id/txt_followers_amount"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_user_fullname"
                    app:srcCompat="@drawable/ic_user_followers"
                    android:contentDescription="@string/icon_user_followers" />

                <TextView
                    android:id="@+id/txt_followers_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toStartOf="@+id/imageView5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/txt_followings_amount"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/txt_followers_amount"
                    app:layout_constraintTop_toTopOf="@+id/imageView4"
                    app:srcCompat="@drawable/ic_user_followers"
                    android:contentDescription="@string/icon_user_following" />

                <TextView
                    android:id="@+id/txt_followings_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toStartOf="@+id/imageView6"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/txt_repositories_amount"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/txt_followings_amount"
                    app:layout_constraintTop_toTopOf="@+id/imageView4"
                    app:srcCompat="@drawable/ic_user_repositories"
                    android:contentDescription="@string/icon_user_repositories" />

                <TextView
                    android:id="@+id/txt_repositories_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4"
                    app:srcCompat="@drawable/ic_user_office"
                    android:contentDescription="@string/icon_user_office" />

                <TextView
                    android:id="@+id/txt_user_office"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="@+id/imageView7" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_user_office"
                    app:srcCompat="@drawable/ic_user_location"
                    android:contentDescription="@string/icon_user_location" />

                <TextView
                    android:id="@+id/txt_user_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/imageView8" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                app:tabTextColor="@color/colorWhite"
                app:tabSelectedTextColor="@color/colorWhite"
                app:tabIndicatorColor="@color/colorWhite"
                android:id="@+id/tab_layout"
                android:layout_height="wrap_content"/>

            <com.zgenit.githubfavoriteuser.custom.CustomViewPager
                android:layout_width="match_parent"
                android:id="@+id/view_pager"
                android:layout_height="match_parent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:id="@+id/fab_favorite"
            android:src="@drawable/ic_favorite_border"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>
    </FrameLayout>

</RelativeLayout>